--- a/hw-extension/manifest.json
+++ b/hw-extension/manifest.json
@@ -1,11 +1,12 @@
 {
 "manifest_version": 2,
 "name" :"Trellogement",
+"content_security_policy": "script-src 'self' https://api.trello.com; object-src 'self'",
 "version" :"1.0",
 "description" :"Une extension chrome pour simplifier la recherche d'appartement avec Se Loger et Trello",
 "browser_action" :
 	{
-    "default_icon" : "hello.png",
+  	  "default_icon" : "hello.png",
 		"default_popup" :"helloworld.html"
 	}
 }
