--- a/hw-extension/manifest.json
+++ b/hw-extension/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Trellogement",
+	"name": "TrelloGement",
 	"version": "0.1",
 	"manifest_version" : 2,
 	"description": "Gérez facilement vos demandes de logement",
@@ -19,11 +19,6 @@
 	"permissions": [
 		"tabs"
 	],
-	"icons": {
-		"16": "icons/16.png",
-		"48": "icons/48.png",
-		"128": "icons/128.png"
-	},
 	"web_accessible_resources": [
 		"settings/index.html"
 	],
