Added Trello button to seloger.com

--- a/trelloGementExtension/manifest.json
+++ b/trelloGementExtension/manifest.json
@@ -14,6 +14,17 @@
 				"scripts/main.js"
 			],
 			"run_at": "document_idle"
+		},
+
+		{
+			"matches": ["http://www.seloger.com/*"],
+			"js": [
+				"lib/jquery-2.1.1.min.js",
+				"scripts/inject.js"
+			],
+			"css": [
+				"settings/css/button.css"
+			]
 		}
 	],
 	"permissions": [
