Store trello client parameters and get cards

--- a/trelloGementExtension/manifest.json
+++ b/trelloGementExtension/manifest.json
@@ -20,6 +20,8 @@
 			"matches": ["http://www.seloger.com/*"],
 			"js": [
 				"node_modules/jquery/dist/jquery.min.js",
+				"lib/trello-client.js",
+				"scripts/scrapping.js",
 				"scripts/inject.js"
 			],
 			"css": [
@@ -29,11 +31,13 @@
 	],
 	"permissions": [
 		"http://www.seloger.com/*",
-		"tabs"
+		"tabs",
+		"storage"
 	],
 	"web_accessible_resources": [
 		"settings/index.html",
-		"scripts/scrapping.js"
+		"scripts/scrapping.js",
+		"lib/trello-client.js"
 	],
 	"options_page": "settings/index.html"
 }
