--- a/trelloGementExtension/manifest.json
+++ b/trelloGementExtension/manifest.json
@@ -1,6 +1,7 @@
 {
 	"name": "TrelloGement",
 	"version": "0.1",
+	"icons": {"128": "settings/pictures/icon_128.png"},
 	"manifest_version" : 2,
 	"description": "Gérez facilement vos demandes de logement",
 	"page_action" :
